<resources>
    <string name="app_name">Offloadable OCR</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="title_activity_result">OCR Result</string>
    <string name="please_wait">Please wait...</string>
    <string name="ocr_in_progress">Text recognition in progress</string>
    <string name="recognized_text">Recognized text</string>
    <string name="recognition_time">Recognition duration</string>
    <string name="recognized_at">Recognized at</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_image_size_summary">Maximal width of the images taken with camera</string>
    <string name="settings_image_size">Image Size</string>
    <string name="title_activity_settings">Settings</string>
    <string name="initing_ocr_data">Initializing OCR data</string>
    <string name="settings_ocr_whitelist">OCR Character Whitelist</string>
    <string name="settings_ocr_whitelist_summary">Only these characters will be recognized</string>
    <string name="settings_ocr_blacklist">OCR Character Blacklist</string>
    <string name="settings_ocr_blacklist_summary">These characters won\'t be recognized</string>
    <string name="action_save">Save</string>
    <string name="error_saving_settings">Error saving settings</string>
</resources>
