<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="@dimen/activity_vertical_margin">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			style="@style/Header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_image_size"/>

		<EditText
			android:id="@+id/image_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="number"
			android:text="2000"/>

		<TextView
			style="@style/SettingsSummary"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_image_size_summary"/>

		<TextView
			android:id="@+id/textView"
			style="@style/Header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_ocr_whitelist"/>

		<EditText
			android:id="@+id/ocr_whitelist"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"/>

		<TextView
			style="@style/SettingsSummary"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_ocr_whitelist_summary"/>

		<TextView
			android:id="@+id/textView2"
			style="@style/Header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_ocr_blacklist"/>

		<EditText
			android:id="@+id/ocr_blacklist"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"/>

		<TextView
			style="@style/SettingsSummary"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_ocr_blacklist_summary"/>
	</LinearLayout>
</ScrollView>