<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  tools:context="cz.kinst.jakub.diploma.offloadableocr.ResultActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin">

			<TextView
				style="@style/Header"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recognized_at"/>

			<TextView
				android:id="@+id/ocr_result_device_ip"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif-condensed"
				android:textSize="30sp"
				tools:text="192.168.0.2"/>

			<TextView
				style="@style/Header"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recognition_time"/>

			<TextView
				android:id="@+id/ocr_result_duration"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif-condensed"
				android:textSize="24sp"
				tools:text="3200 ms"/>

			<TextView
				style="@style/Header"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recognized_text"/>

			<TextView
				android:id="@+id/ocr_result_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif-condensed"
				android:textIsSelectable="true"
				tools:text="Result kjfasja kjnadsf a  ja sdf a nf  \nasasdfasfsdaf dsafsdafsddsfdsf a ad af a"/>
		</LinearLayout>
	</ScrollView>

</LinearLayout>
